--- a/bii-changes-maricopa-county.ipynb
+++ b/bii-changes-maricopa-county.ipynb
@@ -177,88 +177,33 @@
    "id": "61ec2e19-927e-49a4-aef0-209c5af5a4c5",
    "metadata": {},
    "source": [
-    "### "
+    "### Phoenix Subdivision Shapefile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b9dd773-dcbb-442d-9ba9-1f59e7f87013",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6272e32-3480-4d18-be29-0339f8baedb1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ec32572-9b2e-44f7-9ec2-671612f25bea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "267ee2f8-05b9-43cb-8d07-61ea4f6f8e55",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a724acb-6af6-444e-9095-7f0a120349a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73622b90-a907-4a15-8952-0339de18790e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "2d0d38ee-f6de-4b77-b656-b991a87c4b7b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load Arizona county subdivisions\n",
+    "arizona_subdivisions = gpd.read_file(os.path.join('data', 'tl_2022_04_cousub', 'tl_2022_04_cousub.shp'))\n",
+    "\n",
+    "# Filter to Phoenix subdivision\n",
+    "phoenix_subdivision = arizona_subdivisions[arizona_subdivisions['NAME'] == 'Phoenix']"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "181e84bc-a4d4-464e-8738-ad532ba2e15e",
+   "cell_type": "markdown",
+   "id": "f9e2ac2a-3369-439c-bb98-3b40b808a31f",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4566e82-eb4e-4edd-95a5-e31bfc7d307a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "215a5fd9-8487-4d68-9c07-392484e35d7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Data Exploration\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
